--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,3 +1,16 @@
+.selectComponent{
+    background-color: aliceblue;
+    border: 2px solid #96ddea;
+    border-radius: 5px;
+    height: 600px;
+    width: 530px;
+    position: absolute;
+    z-index: 1;
+}
+.displayNone{
+    display: none;
+}
+
 .ElementClicked{
     border: 4px solid #B74F49;
     border-radius: 5px;
